--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1,22 +1,23 @@
 body {
 
     overflow:scroll;
+
     background-color: #FFFFFF;
 
     color: #323D4F;
 
     font-family: "Lucida Grande",Verdana,Helvetica,sans-serif;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: normal;
 
-    background: rgba(74,148,0,1);
-    background: -moz-linear-gradient(top, rgba(74,148,0,1) 0%, rgba(156,255,171,1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(74,148,0,1)), color-stop(100%, rgba(156,255,171,1)));
-    background: -webkit-linear-gradient(top, rgba(74,148,0,1) 0%, rgba(156,255,171,1) 100%);
-    background: -o-linear-gradient(top, rgba(74,148,0,1) 0%, rgba(156,255,171,1) 100%);
-    background: -ms-linear-gradient(top, rgba(74,148,0,1) 0%, rgba(156,255,171,1) 100%);
-    background: linear-gradient(to bottom, rgba(74,148,0,1) 0%, rgba(156,255,171,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a9400', endColorstr='#9cffab', GradientType=0 );
+    background: rgba(125,125,125,1);
+    background: -moz-linear-gradient(top, rgba(125,125,125,1) 0%, rgba(181,181,181,1) 50%, rgba(125,125,125,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(125,125,125,1)), color-stop(50%, rgba(181,181,181,1)), color-stop(100%, rgba(125,125,125,1)));
+    background: -webkit-linear-gradient(top, rgba(125,125,125,1) 0%, rgba(181,181,181,1) 50%, rgba(125,125,125,1) 100%);
+    background: -o-linear-gradient(top, rgba(125,125,125,1) 0%, rgba(181,181,181,1) 50%, rgba(125,125,125,1) 100%);
+    background: -ms-linear-gradient(top, rgba(125,125,125,1) 0%, rgba(181,181,181,1) 50%, rgba(125,125,125,1) 100%);
+    background: linear-gradient(to bottom, rgba(125,125,125,1) 0%, rgba(181,181,181,1) 50%, rgba(125,125,125,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7d7d', endColorstr='#7d7d7d', GradientType=0 );
 
 }
 
@@ -34,25 +35,22 @@ a.schwarz:active { color:#000000; }
 
 .index_table {
 
-    padding-top:0px;
-    padding-bottom:0px;
-    padding-right:0px;
-    padding-left:0px;
+    padding:0px;
 
     border-spacing:0px;
 
-    background: rgba(23,23,23,1);
-    background: -moz-linear-gradient(top, rgba(23,23,23,1) 0%, rgba(107,107,107,1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(23,23,23,1)), color-stop(100%, rgba(107,107,107,1)));
-    background: -webkit-linear-gradient(top, rgba(23,23,23,1) 0%, rgba(107,107,107,1) 100%);
-    background: -o-linear-gradient(top, rgba(23,23,23,1) 0%, rgba(107,107,107,1) 100%);
-    background: -ms-linear-gradient(top, rgba(23,23,23,1) 0%, rgba(107,107,107,1) 100%);
-    background: linear-gradient(to bottom, rgba(23,23,23,1) 0%, rgba(107,107,107,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#171717', endColorstr='#6b6b6b', GradientType=0 );
+    background: rgba(48,48,48,1);
+    background: -moz-linear-gradient(top, rgba(48,48,48,1) 0%, rgba(217,217,217,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(48,48,48,1)), color-stop(100%, rgba(217,217,217,1)));
+    background: -webkit-linear-gradient(top, rgba(48,48,48,1) 0%, rgba(217,217,217,1) 100%);
+    background: -o-linear-gradient(top, rgba(48,48,48,1) 0%, rgba(217,217,217,1) 100%);
+    background: -ms-linear-gradient(top, rgba(48,48,48,1) 0%, rgba(217,217,217,1) 100%);
+    background: linear-gradient(to bottom, rgba(48,48,48,1) 0%, rgba(217,217,217,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#303030', endColorstr='#d9d9d9', GradientType=0 );
 
-    border-radius: 10px 10px 10px 10px;
-    -moz-border-radius: 10px 10px 10px 10px;
-    -webkit-border-radius: 10px 10px 10px 10px;
+    border-radius: 0px 0px 10px 10px;
+    -moz-border-radius: 0px 0px 10px 10px;
+    -webkit-border-radius: 0px 0px 10px 10px;
     border: 1px solid #000000;
 
     -webkit-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.83);
@@ -63,20 +61,63 @@ a.schwarz:active { color:#000000; }
 
 .index_header {
 
-    color:#FFFFFF;
+    height:200px;
+    width:1200px;
 
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
+    text-align: center;
+
+    color:#000000;
+
+    padding: 0px;
+
+    border-bottom: 1px solid #000000;
+    background-image: url(../images/header.png);
+
+}
+
+.index_menu {
+
+    margin: 0;
+    padding: 0;
 
     border-bottom: 1px solid #000000;
 
 }
 
+.index_site_right {
+
+    vertical-align: top;
+
+    color:#000000;
+
+    width: 250px;
+    height: 600px;
+
+    padding: 10px;
+
+    border-left: 1px solid #000000;
+
+}
+
+.index_site_left {
+
+    vertical-align: top;
+
+    color:#000000;
+
+    padding: 10px;
+
+}
+
 .index_footer {
 
-    color:#FFFFFF;
+    color:#000000;
+    
+    text-align: center;
+    
+    font-size: 10px;
+
+    height: 20px;
 
     padding-top: 0px;
     padding-bottom: 0px;
