--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1,6 +1,6 @@
 body {
 
-    overflow:scroll;
+/*    overflow:scroll; */
 
     background-color: #FFFFFF;
 
@@ -91,7 +91,7 @@ a.schwarz:active { color:#000000; }
     color:#000000;
 
     width: 250px;
-    height: 600px;
+    height: 550px;
 
     padding: 10px;
 
