--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -59,6 +59,40 @@ a.schwarz:active { color:#000000; }
 
 }
 
+.header_left {
+
+	width:200px;
+
+    color:#000000;
+
+}
+
+.header_center {
+
+
+    width:800px;
+
+    text-align: center;
+
+    color:#000000;
+
+    padding: 0px;
+
+}
+
+.header_right {
+
+	position: absolute;
+
+    text-align: right;
+    right: 10px;
+	
+    color:#000000;
+
+    padding: 0px;
+
+}
+
 .index_header {
 
     height:200px;
@@ -91,7 +125,7 @@ a.schwarz:active { color:#000000; }
     color:#000000;
 
     width: 250px;
-    height: 550px;
+    height: 570px;
 
     padding: 10px;
 
