Added custom font

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Minecraftia";
+  src: url("/includes/css/fonts/Minecraftia.ttf");
+}
+
 body {
 
 /*    overflow:scroll; */
@@ -87,6 +92,8 @@ a.schwarz:active { color:#000000; }
     vertical-align: bottom;
     
     padding: 30px;
+    
+    font-family: "Minecraftia", inherit;
 
 }
 
