Fixed custom font

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -93,7 +93,7 @@ a.schwarz:active { color:#000000; }
     
     padding: 30px;
     
-    font-family: "Minecraftia", inherit;
+    font-family: "Minecraftia";
 
 }
 
