--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1,6 +1,12 @@
+font-face {
+  font-family: "Minecraftia";
+  src: url("/includes/css/fonts/Minecraftia.ttf");
+}
+
 body {
 
-    overflow:scroll; 
+    overflow-y: scroll;
+    overflow-x: hidden;
 
     background-color: #FFFFFF;
 
@@ -90,6 +96,9 @@ a.schwarz:active { color:#000000; }
     
     padding: 30px;
 
+	   
+    font-family: "Minecraftia";
+	
 }
 
 .header_right {
