--- a/layout_test/css/default.css
+++ b/layout_test/css/default.css
@@ -433,7 +433,7 @@
 		margin:2.5em 0 0
 	}
 	.buttons > span{
-		background:url(../img/sep-vert.gif) no-repeat 50% 50%;
+		background:url(../img/sep-vert.png) no-repeat 50% 50%;
 		display:inline-block;
 		font-size:1.714em;
 		line-height:1.125em;
@@ -569,7 +569,7 @@
 		)
 	}
 	.gallery{
-		background:url(../img/sep-hor.gif) no-repeat 50% 0;
+		background:url(../img/sep-hor.png) no-repeat 50% 0;
 		padding:2px 0;
 		position:relative;
 		margin:0 auto;
@@ -581,7 +581,7 @@
 		position:absolute;
 		bottom:0;
 		left:0;
-		background:url(../img/sep-hor.gif) no-repeat 50% 0;
+		background:url(../img/sep-hor.ong) no-repeat 50% 0;
 		width:100%;
 		height:2px;
 	}
@@ -646,7 +646,7 @@
 	.slides li{
 		padding:0;
 		position:relative;
-		background:url(../img/sep-vert.gif) no-repeat 50% 50%;
+		background:url(../img/sep-vert.png) no-repeat 50% 50%;
 	}
 	* +html .slides li{
 		display:inline;
@@ -683,7 +683,7 @@
 	}
 	#testimonials .row{
 		padding:0;
-		background:url(../img/sep-hor.gif) no-repeat 50% 1.5em;
+		background:url(../img/sep-hor.png) no-repeat 50% 1.5em;
 	}
 	#testimonials .row:first-child{
 		background:none;
@@ -744,7 +744,7 @@
 		position:relative;
 	}
 	#testimonials blockquote:after{
-		background:url(../img/sep-hor.gif) no-repeat 50% 0;
+		background:url(../img/sep-hor.png) no-repeat 50% 0;
 		content:"";
 		position:absolute;
 		left:0;
