--- a/layout_test/css/default.css
+++ b/layout_test/css/default.css
@@ -581,7 +581,7 @@
 		position:absolute;
 		bottom:0;
 		left:0;
-		background:url(../img/sep-hor.ong) no-repeat 50% 0;
+		background:url(../img/sep-hor.png) no-repeat 50% 0;
 		width:100%;
 		height:2px;
 	}
