--- a/layout/index.html
+++ b/layout/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 		<!-- Super Simple Slieder -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 		<script src="js/sss.min.js"></script>
 		<link rel="stylesheet" href="css/sss.css" type="text/css" media="all">
 		<script>
@@ -58,8 +58,8 @@
 					</div>
 					<div class="r-1-2">
 						<form>
-							<input type="email" placeholder="E-Mail"></input>
-							<input type="submit" value="Newsletter abonnieren"
+							<input type="email" placeholder="E-Mail">
+							<input type="submit" value="Newsletter abonnieren">
 						</form>
 					</div>
 				</div>
