--- a/layout/css/r.css
+++ b/layout/css/r.css
@@ -21,7 +21,7 @@
 **		x. Font Styling
 */
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url(//fonts.googleapis.com/css?family=Open+Sans);
 @font-face {
     font-family: Minecraftia;
     src: url(../font/Minecraftia.ttf);
