--- a/layout/index.html
+++ b/layout/index.html
@@ -64,8 +64,8 @@
 					</div>
 				</div>
 			</div>
-
-			<div class="white" id="1">
+			<div class="anchor" id="1"></div>
+			<div class="white">
 
 				<div class="container">
 
@@ -92,7 +92,8 @@
 
 			</div>
 
-			<div class="dark-grey" id="2">
+			<div class="anchor" id="2"></div>
+			<div class="dark-grey">
 				<div class="container">
 					<div class="r-1">
 						<h3>So viele Farben...</h3>
@@ -103,7 +104,8 @@
 				</div>
 			</div>
 
-			<div class="grey" id="3">
+			<div class="anchor" id="3"></div>
+			<div class="grey">
 				<div class="container">
 					<div class="r-1">
 						<h3>Hübsch nicht?</h3>
@@ -142,7 +144,7 @@
 					var ziel = $(this).attr("href");
 
 					$('html,body').animate({
-						scrollTop: $(ziel).offset().top - 84
+						scrollTop: $(ziel).offset().top
 					}, 1000 , function (){location.hash = ziel;});
 				});
 				return false;
