--- a/layout/index.html
+++ b/layout/index.html
@@ -25,7 +25,7 @@
 	</head>
 
 	<body>
-		<div class="top" id="top"></div>
+		<div class="anchor" id="top"></div>
 		<div class="pre-header">
 			<img src="img/flags/de.png" />
 			<img src="img/flags/us.png" />
