--- a/layout/index.html
+++ b/layout/index.html
@@ -7,9 +7,10 @@
 
 		<!-- Styles -->
 		<link type="text/css" rel="stylesheet" href="css/r.css">
+		<link type="text/css" rel="stylesheet" href="css/sss.css" media="all">
 		<noscript id="loadCSS">
 			<link type="text/css" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-			<link rel="stylesheet" href="css/sss.css" type="text/css" media="all">
+			<link type="text/css" rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans">
 		</noscript>
 
 		<!-- Scripts -->
