--- a/layout/index.html
+++ b/layout/index.html
@@ -22,8 +22,18 @@
 	<body>
 		<div class="anchor" id="top"></div>
 		<div class="pre-header">
-			<img src="img/flags/de.png" alt="Deutsch" title="Deutsch" />
-			<img src="img/flags/us.png" alt="English" title="English" />
+			<form method="POST">
+				<div class="en">
+					<div>
+						<input src="/includes/images/sprite.png" alt="English" title="English" name="en" type="image">
+					</div>
+				</div>
+				<div class="de selected">
+					<div>
+						<input src="/includes/images/sprite.png" alt="Deutsch" title="Deutsch" name="de" type="image">
+					</div>
+				</div>
+			</form>
 		</div>
 		<div class="header-background"></div>
 		<div class="header">
