--- a/layout/css/r.css
+++ b/layout/css/r.css
@@ -170,43 +170,36 @@ a:hover {
 }
 
 div.pre-header div {
-  margin: 1px;
-  display: inline-block;
-  line-height: 0px;
+	margin: 1px;
+	display: inline-block;
+	line-height: 0px;
 }
 
 div.pre-header div.selected {
-  margin: 0px;
-  border: 1px black solid;
+	margin: 0px;
+	border: 1px black solid;
 }
 
 div.pre-header div div {
-  position: relative;
-  overflow: hidden;
-  width: 22px;
-	height: 16px;
-  margin: 5px;
+	position: relative;
+	overflow: hidden;
 }
 
 div.pre-header input {
-  position: absolute;
-  width: 82px;
-  height: 80px;
-  -webkit-border-radius: 0px;
-  -moz-border-radius: 0px;
-  border-radius: 0px;  
+	position: absolute;
+	width: 82px;
+	height: 80px;
+	-webkit-border-radius: 0px;
+	-moz-border-radius: 0px;
+	border-radius: 0px;
 }
 
 div.pre-header div.en input {
-  top: 0px;
+	top: 0px;
 }
 
 div.pre-header div.de input {
-  top: -40px;
-}
-
-div.pre-header div div input {
-	left: -60px;
+	top: -40px;
 }
 
 /*
@@ -472,6 +465,19 @@ input[type="submit"]:focus {
 		.r-1-2, .r-1-8 { width: 50%; }
 		.r-1-3 { width: 33.33%; }
 		.r-2-3, .r-3-4, .r-7-8 { width: 66.66%; }
+
+		/*
+		**	Header & Navigation 
+		**	------------------------------------
+		*/
+
+		div.pre-header div div {
+			width: 22px;
+			height: 16px;
+			margin: 5px;
+		}
+
+		div.pre-header div div input{ left: -60px; }
 	}
 	
 	/*
