--- a/layout/css/r.css
+++ b/layout/css/r.css
@@ -490,8 +490,8 @@ input[type="submit"]:focus {
 	*/
 	
 	@media (min-width: 1400px) {
-		.r-1, { width: 100%; }
-		.r-1-2{ width: 50%; }
+		.r-1 { width: 100%; }
+		.r-1-2 { width: 50%; }
 		.r-1-3 { width: 33.33%; }
 		.r-2-3 { width: 66.66%; }
 		.r-1-8 { width: 25%; }
